--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</ul>
 	</section>
 
-	<section class="content">
+	<section class="main">
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -38,6 +38,13 @@
 	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
 	<img src="http://s10.postimg.org/w94x7uqmh/Tampa_Green_Bridge_975_W.jpg">
+	</section>
+
+	<section class="gallery">
+	<a href="http://placehold.it/150x150"><img src="http://placehold.it/150x150"></a>
+	<a href="http://placehold.it/150x150"><img src="http://placehold.it/150x150"></a>
+	<a href="http://placehold.it/150x150"><img src="http://placehold.it/150x150"></a>
+	<a href="http://placehold.it/150x150"><img src="http://placehold.it/150x150"></a>
 	</section>
 	
 
